[gd_scene load_steps=21 format=3 uid="uid://jndsgkkqjri5"]

[ext_resource type="Script" uid="uid://b2j3lgjjq7q4g" path="res://Scripts/Menus/main_menu.gd" id="1_nahon"]
[ext_resource type="Texture2D" uid="uid://drfgxem55uf4" path="res://Aseprite/Menus/MainMenu/Play/PlayButtonNotPressed.png" id="3_o8f75"]
[ext_resource type="Texture2D" uid="uid://bmibg4uobylib" path="res://Aseprite/Menus/MainMenu/Play/PlayButtonPressed.png" id="4_15kom"]
[ext_resource type="Texture2D" uid="uid://btwvwkuhmrip8" path="res://Aseprite/Menus/MainMenu/Play/PlayButtonOver.png" id="5_qspkb"]
[ext_resource type="Texture2D" uid="uid://cmkbieu1lquuo" path="res://Aseprite/Menus/MainMenu/Controls/ControlsButtonNotPressed.png" id="6_pokyk"]
[ext_resource type="Texture2D" uid="uid://bikm65vkpeth4" path="res://Aseprite/Menus/MainMenu/Controls/ControlsButtonPressed.png" id="7_g5lxn"]
[ext_resource type="Texture2D" uid="uid://ctmrnghqiypda" path="res://Aseprite/Menus/MainMenu/Controls/ControlsButtonOver.png" id="8_n0y2f"]
[ext_resource type="Texture2D" uid="uid://b0ci8w811uoen" path="res://Aseprite/Menus/MainMenu/Credits/CreditsButtonNotPressed.png" id="8_oshha"]
[ext_resource type="Texture2D" uid="uid://dpftb708u5gjw" path="res://Aseprite/Menus/MainMenu/Credits/CreditsButtonPressed.png" id="9_s1siy"]
[ext_resource type="Texture2D" uid="uid://cp85ah0lxk5xt" path="res://Aseprite/Menus/MainMenu/Credits/CreditsButtonOver.png" id="10_ent53"]
[ext_resource type="Texture2D" uid="uid://cye1j5lj8dmhf" path="res://Aseprite/Menus/MainMenu/Exit/ExitButtonNotPressed.png" id="11_c6ytl"]
[ext_resource type="Texture2D" uid="uid://bx8fe56lijmsk" path="res://Aseprite/Menus/MainMenu/Exit/ExitButtonPressed.png" id="12_ndpbd"]
[ext_resource type="Texture2D" uid="uid://hkqlvcsr1o5e" path="res://Aseprite/Menus/MainMenu/Exit/ExitButtonOver.png" id="13_uh2fw"]
[ext_resource type="Texture2D" uid="uid://b2x7x2284ravc" path="res://Aseprite/Menus/MainMenu/MainMenuTitle.png" id="14_h35ht"]
[ext_resource type="Texture2D" uid="uid://cldfcnec7b35r" path="res://Aseprite/Menus/ConfigurationMenu/Teclat.png" id="15_jr4hs"]
[ext_resource type="Texture2D" uid="uid://b7ygu63wqj7gk" path="res://Aseprite/Intro/GodotLogo.png" id="16_f5kfo"]
[ext_resource type="Texture2D" uid="uid://d10s8n1dm5no4" path="res://Aseprite/Intro/Intro.png" id="17_hu0by"]

[sub_resource type="Animation" id="Animation_pbom0"]
resource_name = "FadeOut"
length = 3.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ControlIntro/IntroColor:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1, 3),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(0.129412, 0.109804, 0.105882, 1), Color(0.129412, 0.109804, 0.105882, 1), Color(0.129412, 0.109804, 0.105882, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("ControlIntro/PreColor:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.5),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_qkxx0"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ControlIntro/IntroColor:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0.129412, 0.109804, 0.105882, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("ControlIntro/PreColor:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_0n1gh"]
_data = {
&"FadeOut": SubResource("Animation_pbom0"),
&"RESET": SubResource("Animation_qkxx0")
}

[node name="main_menu" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
script = ExtResource("1_nahon")
metadata/_edit_horizontal_guides_ = [0.0, 648.0, 125.0, 386.0]
metadata/_edit_vertical_guides_ = [577.0, 1152.0, 0.0, 0.0, 290.0, 865.0]

[node name="ControlMainMenuColor" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="backGroundColor" type="ColorRect" parent="ControlMainMenuColor"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.129412, 0.109804, 0.105882, 1)

[node name="frontGroundColor" type="ColorRect" parent="ControlMainMenuColor"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.007
anchor_top = 0.198
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -8.064
offset_top = -0.304016
grow_horizontal = 2
grow_vertical = 2
color = Color(0.368627, 0.796078, 0.65098, 1)

[node name="PlayMenu" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="menuTitle" type="TextureRect" parent="PlayMenu"]
layout_mode = 0
offset_left = 156.0
offset_right = 997.0
offset_bottom = 125.0
texture = ExtResource("14_h35ht")

[node name="MenuVBox" type="VBoxContainer" parent="PlayMenu"]
layout_mode = 1
anchors_preset = 13
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -576.0
offset_top = 125.0
offset_bottom = -261.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(2, 2)
theme_override_constants/separation = 12
alignment = 1

[node name="PlayTextureButton" type="TextureButton" parent="PlayMenu/MenuVBox"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture_normal = ExtResource("3_o8f75")
texture_pressed = ExtResource("4_15kom")
texture_hover = ExtResource("5_qspkb")

[node name="ControlsTextureButton" type="TextureButton" parent="PlayMenu/MenuVBox"]
layout_mode = 2
size_flags_horizontal = 4
texture_normal = ExtResource("6_pokyk")
texture_pressed = ExtResource("7_g5lxn")
texture_hover = ExtResource("8_n0y2f")

[node name="CreditsTextureButton" type="TextureButton" parent="PlayMenu/MenuVBox"]
layout_mode = 2
size_flags_horizontal = 4
texture_normal = ExtResource("8_oshha")
texture_pressed = ExtResource("9_s1siy")
texture_hover = ExtResource("10_ent53")

[node name="ExitTextureButton" type="TextureButton" parent="PlayMenu/MenuVBox"]
layout_mode = 2
size_flags_horizontal = 4
texture_normal = ExtResource("11_c6ytl")
texture_pressed = ExtResource("12_ndpbd")
texture_hover = ExtResource("13_uh2fw")

[node name="OptionsMenuVBox" type="VBoxContainer" parent="PlayMenu"]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 559.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="Controls" type="Sprite2D" parent="PlayMenu/OptionsMenuVBox"]
position = Vector2(577, -200)
scale = Vector2(1.3, 1.3)
texture = ExtResource("15_jr4hs")

[node name="ExitOptionsTextureButton" type="TextureButton" parent="PlayMenu/OptionsMenuVBox"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture_normal = ExtResource("11_c6ytl")
texture_pressed = ExtResource("12_ndpbd")
texture_hover = ExtResource("13_uh2fw")

[node name="CreditsMenuVBox" type="VBoxContainer" parent="PlayMenu"]
visible = false
layout_mode = 0
offset_top = 472.0
offset_right = 1152.0
offset_bottom = 610.0
alignment = 1

[node name="GodotImage" type="Sprite2D" parent="PlayMenu/CreditsMenuVBox"]
position = Vector2(290, -184)
scale = Vector2(0.5, 0.5)
texture = ExtResource("16_f5kfo")

[node name="RegisterImage" type="Sprite2D" parent="PlayMenu/CreditsMenuVBox"]
position = Vector2(840, -170)
scale = Vector2(0.5, 0.5)
texture = ExtResource("17_hu0by")

[node name="RichTextLabel" type="RichTextLabel" parent="PlayMenu/CreditsMenuVBox"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2
text = "2D Pixel Art Character Template Asset Pack by ZeggyGames - CC BY https://zegley.itch.io/
"
fit_content = true
tab_size = 18
horizontal_alignment = 1

[node name="ExitCreditsTextureButton" type="TextureButton" parent="PlayMenu/CreditsMenuVBox"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture_normal = ExtResource("11_c6ytl")
texture_pressed = ExtResource("12_ndpbd")
texture_hover = ExtResource("13_uh2fw")

[node name="ControlIntro" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="IntroColor" type="ColorRect" parent="ControlIntro"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.129412, 0.109804, 0.105882, 0)

[node name="PreColor" type="ColorRect" parent="ControlIntro"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.129412, 0.109804, 0.105882, 1)

[node name="AnimationIntro" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_0n1gh")
}

[connection signal="pressed" from="PlayMenu/MenuVBox/PlayTextureButton" to="." method="_on_play_texture_button_pressed"]
[connection signal="pressed" from="PlayMenu/MenuVBox/ControlsTextureButton" to="." method="_on_options_texture_button_pressed"]
[connection signal="pressed" from="PlayMenu/MenuVBox/CreditsTextureButton" to="." method="_on_credits_texture_button_pressed"]
[connection signal="pressed" from="PlayMenu/MenuVBox/ExitTextureButton" to="." method="_on_exit_texture_button_pressed"]
[connection signal="pressed" from="PlayMenu/OptionsMenuVBox/ExitOptionsTextureButton" to="." method="_on_exit_options_texture_button_pressed"]
[connection signal="pressed" from="PlayMenu/CreditsMenuVBox/ExitCreditsTextureButton" to="." method="_on_exit_credits_texture_button_pressed"]
[connection signal="animation_finished" from="AnimationIntro" to="." method="_on_animation_intro_animation_finished"]
